feat: :sparkles: 스크롤을 이용한 인터랙션 구현

--- a/blank.html
+++ b/blank.html
@@ -32,16 +32,16 @@
       </nav>
       <section class="scroll-section" id="scroll-section-0">
         <h1>AirMug Pro</h1>
-        <div class="sticky-elem main-message">
+        <div class="sticky-elem main-message a">
           <p>온전히 빠져들게 하는<br />최고급 세라믹</p>
         </div>
-        <div class="sticky-elem main-message">
+        <div class="sticky-elem main-message b">
           <p>주변 맛을 느끼게 해주는<br />주변 맛 허용 모드</p>
         </div>
-        <div class="sticky-elem main-message">
+        <div class="sticky-elem main-message c">
           <p>온종일 편안한<br />맞춤형 손잡이</p>
         </div>
-        <div class="sticky-elem main-message">
+        <div class="sticky-elem main-message d">
           <p>새롭게 입가를<br />찾아온 매혹</p>
         </div>
       </section>
@@ -59,13 +59,13 @@
         </p>
       </section>
       <section class="scroll-section" id="scroll-section-2">
-        <div class="sticky-elem main-message">
+        <div class="sticky-elem main-message a">
           <p>
             <small>편안한 촉감</small>
             입과 하나 되다
           </p>
         </div>
-        <div class="sticky-elem desc-message">
+        <div class="sticky-elem desc-message b">
           <p>
             편안한 목넘김을 완성하는 디테일한 여러 구성 요소들, 우리는 이를
             하나하나 새롭게 살피고 재구성하는 과정을 거쳐 새로운 수준의 머그,
@@ -74,7 +74,7 @@
           </p>
           <div class="pin"></div>
         </div>
-        <div class="sticky-elem desc-message">
+        <div class="sticky-elem desc-message c">
           <p>디자인 앤 퀄리티 오브 스웨덴,<br />메이드 인 차이나</p>
           <div class="pin"></div>
         </div>
@@ -101,5 +101,6 @@
       </section>
       <footer class="footer">2022, 1분 코딩</footer>
     </div>
+    <script src="js/my_main.js"></script>
   </body>
 </html>
