feat: :sparkles: add video interaction (canvas#video-canvas-0) to scroll-section-0

--- a/blank.html
+++ b/blank.html
@@ -32,6 +32,9 @@
       </nav>
       <section class="scroll-section" id="scroll-section-0">
         <h1>AirMug Pro</h1>
+        <div class="sticky-elem sticky-elem-canvas">
+          <canvas id="video-canvas-0" width="1920" height="1080" />
+        </div>
         <div class="sticky-elem main-message a">
           <p>온전히 빠져들게 하는<br />최고급 세라믹</p>
         </div>
