feat: :sparkles: add video interaction (canvas#video-canvas-1) to scroll-section-2

--- a/blank.html
+++ b/blank.html
@@ -62,6 +62,9 @@
         </p>
       </section>
       <section class="scroll-section" id="scroll-section-2">
+        <div class="sticky-elem sticky-elem-canvas">
+          <canvas id="video-canvas-1" width="1920" height="1080" />
+        </div>
         <div class="sticky-elem main-message a">
           <p>
             <small>편안한 촉감</small>
