--- a/blank.html
+++ b/blank.html
@@ -91,6 +91,7 @@
           아이디어를 광활하게 펼칠<br />
           아름답고 부드러운 음료 공간.
         </p>
+        <canvas class="image-blend-canvas" width="1920" height="1080" />
         <p class="canvas-caption">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet at
           fuga quae perspiciatis veniam impedit et, ratione est optio porro.
