--- a/blank.html
+++ b/blank.html
@@ -33,7 +33,7 @@
       <section class="scroll-section" id="scroll-section-0">
         <h1>AirMug Pro</h1>
         <div class="sticky-elem sticky-elem-canvas">
-          <canvas id="video-canvas-0" width="1920" height="1080" />
+          <canvas id="video-canvas-0" width="1920" height="1080"></canvas>
         </div>
         <div class="sticky-elem main-message a">
           <p>온전히 빠져들게 하는<br />최고급 세라믹</p>
@@ -63,7 +63,7 @@
       </section>
       <section class="scroll-section" id="scroll-section-2">
         <div class="sticky-elem sticky-elem-canvas">
-          <canvas id="video-canvas-1" width="1920" height="1080" />
+          <canvas id="video-canvas-1" width="1920" height="1080"></canvas>
         </div>
         <div class="sticky-elem main-message a">
           <p>
@@ -91,7 +91,7 @@
           아이디어를 광활하게 펼칠<br />
           아름답고 부드러운 음료 공간.
         </p>
-        <canvas class="image-blend-canvas" width="1920" height="1080" />
+        <canvas class="image-blend-canvas" width="1920" height="1080"></canvas>
         <p class="canvas-caption">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet at
           fuga quae perspiciatis veniam impedit et, ratione est optio porro.
