--- a/blank.html
+++ b/blank.html
@@ -12,7 +12,12 @@
     <link rel="stylesheet" href="css/default.css" />
     <link rel="stylesheet" href="css/main.css" />
   </head>
-  <body>
+  <body class="before-loading">
+    <div class="loading">
+      <svg class="loading-circle">
+        <circle cx="50%" cy="50%" r="25"></circle>
+      </svg>
+    </div>
     <div class="container">
       <nav class="global-nav">
         <div class="global-nav-links">
