feat: :sparkles: add normal-content  to bottom

--- a/blank.html
+++ b/blank.html
@@ -111,6 +111,22 @@
           perferendis iusto explicabo animi eos ratione obcaecati.
         </p>
       </section>
+      <section class="normal-content">
+        <p class="mid-message">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
+          harum veritatis voluptatibus perferendis voluptate corporis ipsum
+          dolorem pariatur facere alias, vitae minus accusantium fugiat quos ab,
+          recusandae autem quas vero.
+        </p>
+      </section>
+      <section class="normal-content">
+        <p class="mid-message">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
+          harum veritatis voluptatibus perferendis voluptate corporis ipsum
+          dolorem pariatur facere alias, vitae minus accusantium fugiat quos ab,
+          recusandae autem quas vero.
+        </p>
+      </section>
       <footer class="footer">2022, 1분 코딩</footer>
     </div>
     <script src="js/my_main.js"></script>
