refactor: :truck: rename main.css -> my_main.css, main-completed.css -> main.css

--- a/blank.html
+++ b/blank.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/default.css" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/my_main.css" />
   </head>
   <body class="before-loading">
     <div class="loading">
