--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/default.css" />
-    <link rel="stylesheet" href="css/main-completed.css" />
+    <link rel="stylesheet" href="css/main.css" />
   </head>
   <body class="before-load">
     <div class="loading">
